@@ -138,6 +138,11 @@ function checkForErrors() {
         <div class="tip">Show Google Charts Graph in popup</div>
         <br /><br />
 
+        <label for="show_notifications">Enable Notifications</label>
+        <input class="extension-preference-checkbox" type="checkbox" id="show_notifications" value="1" />
+        <div class="tip">Display a desktop notification when a download completes</div>
+        <br /><br />
+
         <label for="hardcoded_category">Hard-coded Category</label>
         <input class="extension-preference" type="text" id="hardcoded_category" value="" />
         <div class="tip">Will use this category for <strong>all</strong> downloads sent to SABnzbd.</div>
